# mini-vllm

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  README_EN.md  examples.py  hf_dwnload.sh  intro.md  mini-vllm.md  prompt.md  pyproject.toml  set_env.sh
.agents/skills/mini-vllm/agents/: openai.yaml
.claude/: .mcp.json  ecc-tools.json  identity.json  memory.md  settings.json  statusline.sh
.claude/agents/: architect.md  code-reviewer.md  debugger.md  doc-writer.md  library-integration.md  refactor.md  shell-expert.md  test-writer.md
.claude/homunculus/instincts/inherited/: mini-vllm-instincts.yaml
.claude/hooks/: autoformat-hook.sh  block-dangerous.sh  cleanup-session.sh  compact-restore.sh  log-commands.sh  notify.sh  post-tool-use.sh  pre-tool-use.sh  protect-files.sh  session-init.sh  shellcheck-hook.sh
.claude/rules/: compatibility.md  python-style.md  shell-style.md
.claude/skills/check/: SKILL.md
.claude/skills/check-syntax/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/mini-vllm/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: code-quality.yml  pytests.yml
.trae/rules/: cursorrules.md
.trae/skills/code-optimizer/: SKILL.md
docs/: blog_intro_general.md  blog_intro_npu.md  debug-qwen3-garbled-output.md  mp_event_demo.py  multi-process.md  npu_benchmark_report.md  npu_flash_attention_guide.md  npu_optimization.md  skills.md
examples/: README.md  batch_inference_example.py  check_npu_graph.py  cpu_inference_opt.py  cpu_inference_opt_model_runner.py  cpu_inference_qwen25.py  mp_event_demo.py  npu_flash_attention_example.py  npu_inference_example.py  npu_tp_example.py  sampling_params_example.py
minivllm/: __init__.py  config.py  llm.py  sampling_params.py
minivllm/engine/: __init__.py  block_manager.py  distributed_manager.py  inference_executor.py  llm_engine.py  model_runner.py  model_runner_opt.py  scheduler.py  sequence.py
minivllm/models/: __init__.py  gpt2.py  manager.py  opt.py  qwen2.py  qwen3.py  qwen_base.py  registry.py  sampler.py
minivllm/models/layers/: __init__.py  activation.py  attention.py  attention_backend.py  attention_gather.py  embed_head.py  layernorm.py  linear.py  npu_flash_attention.py  page_attention.py  rotary_embedding.py  sampler.py
minivllm/sampling/: __init__.py  advanced_examples.py  base.py  batch_sampler.py  combined.py  config.py  example.py  functional.py  generation.py  generation2.py  greedy.py  min_p.py  mirostat.py  nucleus.py  random.py  sampler.py  temperature.py  top_k.py  top_p.py  top_p_top_k.py  typical.py  warpers.py
minivllm/utils/: __init__.py  context.py  device.py  example_utils.py  loader.py  logger_utils.py  memory_pool.py  random_utils.py
tests/: README.md  conftest.py  run_tests.py  test_block_manager.py  test_config.py  test_device.py  test_integration.py  test_linear.py  test_llm.py  test_llm_engine.py  test_loaders.py  test_model_runner.py  test_npu_attention.py  test_npu_backend.py  test_page_attention.py  test_qwen3_logit_match.py  test_qwen3_npu.py  test_rotary_embedding.py  test_sampler.py  test_sampling.py  test_sampling_config.py  test_sampling_params.py  test_scheduler.py  test_sequence.py
tools/: hf_dwnload.sh  link_claude_config.sh
