[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "minivllm"
version = "0.1.0"
authors = [{ name = "jianzhnie" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.37.0",
    "xxhash",
    "colorama",
    "numpy<2",
]

[project.urls]
Homepage="https://github.com/jianzhnie/mini-vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["minivllm*"]
