[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "minivllm"
version = "0.1.0"
authors = [{ name = "jianzhnie" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.37.0",
    "xxhash",
    "colorama",
    "numpy<2",
    "tqdm>=4.62.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
cuda = [
    "flash-attn>=2.6.0",
    "triton>=2.3.0",
]
npu = [
    "torch-npu>=2.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage="https://github.com/jianzhnie/mini-vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["minivllm*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "I",    # Isort (import sorting)
    "B",    # Flake8-bugbear
    "C4",   # Flake8-comprehensions
    "SIM",  # Flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["minivllm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]
